first version of site

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Fedoraware</title>
 </head>
 <body>
-    
+    <div class="header">
+        <center>
+            <h1>Fedoraware</h1>
+            <h2>SE-Owned but cool</h2>
+        </center>
+    </div> 
+    <div class="main-bit">
+        <center>
+            <div class="link-button"><a href="https://nightly.link/tf2cheater2013/Fedoraware/workflows/msbuild/main/Fedoraware.zip">Download latest</a></div>
+            <div class="link-button"><a href="https://github.com/tf2cheater2013/Fedoraware">GitHub</a></div>
+            <div class="link-button"><a href="https://discord.com/invite/kFkk2jahak">Discord</a></div>
+        </center>
+        <!--  -->
+    </div>
 </body>
 </html>
