--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <center>
             <div class="link-button"><a href="https://nightly.link/Fedoraware/Fedoraware/workflows/msbuild/main/Fedoraware.zip">Download latest</a></div>
             <div class="link-button"><a href="https://github.com/tf2cheater2013/Fedoraware">GitHub</a></div>
+            <div class="link-button"><a href="https://fedoraware.github.io/Docs/">Documentation</a></div>
             <div class="link-button"><a href="https://discord.com/invite/kFkk2jahak">Discord</a></div>
         </center>
         <!--  -->
