--- a/Scoreboard/index.html
+++ b/Scoreboard/index.html
@@ -48,8 +48,7 @@
 
 <script>
     function s(str){
-        str = str.replace(/[^a-z0-9áéíóúñü \.\[\]:,_-]/gim,"");
-        return str.trim();
+        return str.replace(/[^a-z0-9áéíóúñü \.\[\]:,_-]/gim,"").trim();
     }
 
     function UpdateTable() {
