Actually, let's not use tailwind to assign a color

--- a/Scoreboard/index.html
+++ b/Scoreboard/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div>
-        <span class="text-3xl font-bold"><span class="text-rose-400/100">Fedoraware</span> Leaderboard</span>
+        <span class="text-3xl font-bold"><span class="titlecolor">Fedoraware</span> Leaderboard</span>
 
         <div class="w-full max-h-96 overflow-y-auto">
             <table id="scoreTable" class="w-full max-w-4xl max-h-2 border-collapse">
