--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <title>Fedoraware</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="media/fedoraware.ico" type="image/x-icon">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fedoraware official website">
     <meta name="keywords" content="TF2 Cheats, tf2 cheats, cheats, fedoraware, Fedoraware tf2, fedoraware tf2 cheat">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="header">
