--- a/Scoreboard/index.html
+++ b/Scoreboard/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Fedoraware Leaderboard</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/media/fedoraware.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
 </div>
 
 <script>
-    document.location = "http://198.244.189.210:4077/leaderboard";
+
     
     function s(str){
         return str.replace(/[^a-z0-9áéíóúñü \.\[\]:,_-]/gim,"").trim();
