--- a/Scoreboard/index.html
+++ b/Scoreboard/index.html
@@ -45,6 +45,7 @@
 
 <script>
 
+    document.location = "http://198.244.189.210:4077/leaderboard";
     
     function s(str){
         return str.replace(/[^a-z0-9áéíóúñü \.\[\]:,_-]/gim,"").trim();
