--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Fedoraware</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="media/fedoraware.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +13,13 @@
 </head>
 <body>
     <div class="header">
-        <center>
-            <h1>Fedoraware</h1>
-            <h2>SE-Owned but cool</h2>
-        </center>
+        <h1 class="animate__animated animate__fadeInDown">Fedoraware</h1>
+        <h2 class="animate__animated animate__fadeInDown"">SE-Owned but cool</h2>
     </div> 
-    <div class="main-bit">
+    <div class="main-bit animate__animated animate__fadeIn animate__slow">
         <a class="link-button" href="https://nightly.link/Fedoraware/Fedoraware/workflows/msbuild/main/Fedoraware.zip">Download Latest Build</a>
         <a class="link-button" href="https://github.com/tf2cheater2013/Fedoraware">GitHub</a>
+        <a class="link-button" href="https://fedoraware.ncvisualsvault.cc/">Visual Vault</a>
         <a class="link-button" href="https://fedoraware.github.io/Docs/">Documentation</a>
         <a class="link-button" href="https://discord.com/invite/kFkk2jahak">Discord</a>
     </div>
